--- a/render.html
+++ b/render.html
@@ -156,8 +156,7 @@
           </div>
           <div class="modal-body">
             <h1>도움말</h1>
-            <p>스마트 키</p>
-            <p>...</p>
+            <p>없습니다.</p>
             <h1>개발자</h1>
             <p>김은찬</p>
             <p>경성대학교 데이터베이스 연구실</p>
